js/src/tests/test262/language/statements/class/elements/syntax/early-errors/invalid-names/field-init-fn-call-expression-this.js
DONOTEVALUATE
(
)
;
class
C
{
f
=
function
(
)
{
(
(
)
=
>
this
)
(
)
.
#
x
}
}
